# Personal-website

./: .dockerignore  .woodpecker.yml  Cargo.toml  Dockerfile  app.py  data-prototypes.json  docker-compose.yml  music.txt  readme.md
docs/: architecture.md  decisions.md  features.md  roadmap.md
scripts/: deploy.sh  inspect.sh
src/: api.rs  config.rs  data.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs  router.rs  routes.rs  state.rs  templates.rs  tests.rs  utils.rs
static/: base-style.css  food-detail-style.css  food-style.css
static/css/: base-style.css  base.css  components.css  contact-style.css  dropdown.css  food-detail-style.css  food-style.css  layout.css  navbar.css  themes.css  typography.css  variables.css
static/css/pages/: contact.css
static/js/: navbar.js  theme.js
templates/: _nav.html  apps.html  base.html  blog.html  boardgames.html  contact_me.html  food.html  food_detail.html  index.html  logs-card.html  resume.html
templates/partials/: navbar.html
tests/: tests.rs
