[package]
name = "Personal-website"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["fs"] }
pulldown-cmark = "0.13.0"
