[package]
name = "personal-website"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.7"
askama = "0.12"
askama_axum = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header", "compression-gzip"] }
tower_governor = { version = "0.3", features = ["axum"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }
pulldown-cmark = "0.13.0"
cargo-bloat = "0.12.1"
hyper = "1.8.1"
once_cell = "1.21.4"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
